# bioRag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  eval_results.json  ingest.py  main.py  pyproject.toml  requirements.txt  test_timeout.py
data/: eval_results.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
src/: api.py  chunker.py  config.py  evaluate.py  guardrail.py  ingest.py  main.py  rag_pipeline.py  test_chunker.py
