[project]
name = "rars1-genomic-rag"
version = "0.1.0"
description = "RARS1 Genomic-RAG — Clinical & Molecular Intelligence System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.83",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "chainlit>=1.3.0",
]
